# openpi

./: .gitignore  CLAUDE.md  Explog.md  README_CCmimo.md
docs/: Pi0 与 Pi0.5 模型微调 _ 具身智能数据的标注和管理.html
docs/Pi0 与 Pi0.5 模型微调 _ 具身智能数据的标注和管理_files/: js  main.b80cdba4.js  runtime~main.3b286e69.js  styles.97cde4d3.css
docs/superpowers/specs/: 2026-05-21-cr10-libero-training-design.md
examples/cr10_sim/: __init__.py  cr10_scene.xml  env.py  main.py
rangerboxcr10lidar_description/: CMakeLists.txt  package.xml
rangerboxcr10lidar_description/config/: joint_names_rangerboxcr10lidar_description.yaml
rangerboxcr10lidar_description/launch/: display.launch  gazebo.launch
rangerboxcr10lidar_description/meshes/: base_ranger_link.STL  box_link.STL  cr10_link0.STL  lidar_link0.STL
rangerboxcr10lidar_description/urdf/: rangercr10lidar.urdf
src/openpi/policies/: cr10_ik.py  cr10_policy.py
src/openpi/training/: config.py
src/test/: 1modelInferenceExample.py  2InferenceDroidExample.py  3ContinusInferExample.py  4InputSelfDataInferExample.py  5wandb.py
